// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonView atom should match snapshot 1`] = `
<div
  className="jsonView"
>
  <t
    collapseStringsAfterLength={false}
    collapsed={2}
    defaultValue={null}
    displayDataTypes={false}
    displayObjectSize={true}
    enableClipboard={true}
    groupArraysAfterLength={100}
    iconStyle="triangle"
    indentWidth={4}
    name={null}
    onAdd={false}
    onDelete={false}
    onEdit={false}
    onSelect={false}
    shouldCollapse={false}
    sortKeys={false}
    src={
      Object {
        "json": "data",
      }
    }
    style={
      Object {
        "fontFamily": "var(--font-family-monospace)",
        "fontSize": "11px",
        "style": Object {},
      }
    }
    theme={
      Object {
        "base00": "rgba(0, 0, 0, 0)",
        "base01": "rgb(245, 245, 245)",
        "base02": "rgb(240, 240, 240)",
        "base03": "var(--oc-gray-5)",
        "base04": "rgba(0, 0, 0, 0.3)",
        "base05": "var(--oc-gray-7)",
        "base06": "var(--oc-cyan-8)",
        "base07": "var(--oc-gray-8)",
        "base08": "var(--oc-pink-6)",
        "base09": "var(--oc-yellow-9)",
        "base0A": "var(--oc-red-8)",
        "base0B": "var(--oc-green-7)",
        "base0C": "var(--oc-indigo-5)",
        "base0D": "var(--oc-gray-6)",
        "base0E": "var(--oc-teal-6)",
        "base0F": "var(--oc-blue-5)",
      }
    }
    validationMessage="Validation Error"
  />
</div>
`;

exports[`JsonView.THEME should match snapshot 1`] = `
Object {
  "base00": "rgba(0, 0, 0, 0)",
  "base01": "rgb(245, 245, 245)",
  "base02": "rgb(240, 240, 240)",
  "base03": "var(--oc-gray-5)",
  "base04": "rgba(0, 0, 0, 0.3)",
  "base05": "var(--oc-gray-7)",
  "base06": "var(--oc-cyan-8)",
  "base07": "var(--oc-gray-8)",
  "base08": "var(--oc-pink-6)",
  "base09": "var(--oc-yellow-9)",
  "base0A": "var(--oc-red-8)",
  "base0B": "var(--oc-green-7)",
  "base0C": "var(--oc-indigo-5)",
  "base0D": "var(--oc-gray-6)",
  "base0E": "var(--oc-teal-6)",
  "base0F": "var(--oc-blue-5)",
}
`;
